@@ -60,3 +60,10 @@ GC_TUNE="-XX:NewRatio=3 \
 # JMX savvy tools like VisualVM remotely, set to "false" to disable that behavior
 # (recommended in production environments)
 ENABLE_REMOTE_JMX_OPTS="true"
+
+# Anything you add to the SOLR_OPTS variable will be included in the java
+# start command line as-is, in ADDITION to other options. If you specify the
+# -a option on start script, those options will be appended as well. Examples:
+#SOLR_OPTS="$SOLR_OPTS -Dsolr.autoSoftCommit.maxTime=3000"
+#SOLR_OPTS="$SOLR_OPTS -Dsolr.autoCommit.maxTime=60000"
+#SOLR_OPTS="$SOLR_OPTS -Dsolr.clustering.enabled=true"
